kubernetes/tourneys/flask-ghql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tourney-svc
  labels:
    app: tourney
    type: svc
    part-of: tournament-api
spec:
  type: ClusterIP
  selector:
    app: tourney
    type: db
    part-of: tournament-api
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
