kubernetes/tourneys/tourney_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tourney-ingress
spec:
  rules:
    - http:
        paths:
          - path:
            backend:
              serviceName: tournament-svc
              servicePort: 80
